// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account actions fetchAccountSettings() should return a Redux action to get the account settings. 1`] = `
[
  {
    "type": "FETCH_ACCOUNT_SETTINGS_START",
  },
  {
    "accountSettings": {
      "email": 1,
    },
    "type": "FETCH_ACCOUNT_SETTINGS_SUCCESS",
  },
]
`;

exports[`current account actions fetchAccountSettings() should return the error. 1`] = `
[
  {
    "type": "FETCH_ACCOUNT_SETTINGS_START",
  },
  {
    "error": [Error: Request failed with status code 503],
    "reason": "Failed to fetch account settings",
    "type": "FETCH_ACCOUNT_SETTINGS_ERROR",
  },
]
`;

exports[`current account actions setCurrentSubscription() should return a Redux action to set the current subscription. 1`] = `
{
  "subscription": Immutable.Map {
    "products": Immutable.Map {
      "helpdesk": "basic-monthly-usd-4",
    },
    "status": "active",
  },
  "type": "SET_CURRENT_SUBSCRIPTION",
}
`;

exports[`current account actions submit setting creation 1`] = `
[
  {
    "isUpdate": false,
    "setting": {
      "hello": "world",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submit setting update 1`] = `
[
  {
    "isUpdate": true,
    "setting": {
      "hello": "world",
      "id": 1,
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submitSettingSuccess should dispatch the next setting 1`] = `
[
  {
    "isUpdate": false,
    "setting": {
      "data": {
        "view_sections": {},
        "views": {
          "1": {
            "display_order": 2,
          },
        },
        "views_bottom": {},
        "views_top": {},
      },
      "id": 1,
      "type": "views-ordering",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions update account 1`] = `
[
  {
    "type": "UPDATE_ACCOUNT_START",
  },
  {
    "resp": {
      "id": 2,
    },
    "type": "UPDATE_ACCOUNT_SUCCESS",
  },
]
`;

exports[`current account actions update account owner update account owner 1`] = `
[
  {
    "type": "UPDATE_ACCOUNT_OWNER_SUCCESS",
    "userId": 1,
  },
]
`;

exports[`current account actions update subscription product plans updates the local state with the current subscription product plans 1`] = `
[
  {
    "products": {
      "automation": "aut-addon-basic-full-price-monthly-usd-4",
      "helpdesk": "basic-monthly-usd-4",
    },
    "type": "UPDATE_SUBSCRIPTION_PRODUCTS",
  },
]
`;

exports[`current account actions update subscription should update subscription 1`] = `
[
  {
    "subscription": {
      "products": {
        "helpdesk": "basic-monthly-usd-4",
      },
    },
    "type": "UPDATE_SUBSCRIPTION_SUCCESS",
  },
]
`;

exports[`current account actions update subscription when the update fails should dispatch that the update failed 1`] = `
[
  {
    "error": [Error: Request failed with status code 400],
    "reason": "Failed to update the current subscription.",
    "type": "UPDATE_SUBSCRIPTION_ERROR",
  },
]
`;
